@@ -1,5 +1,9 @@
 2012-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* rcsc/player/world_model.cpp:
+	- 位置の差分でボール速度情報を更新する条件を修正．衝突が発生して通
+	常の推定が失敗した場合に，絶対一差分で速度情報を更新する範囲を拡大
+
 	* rcsc/player/ball_object.cpp:
 	- セットプレイ時に視界を広くしているとボールを見失ってしまうバグを修正
 
